syntax = "proto3"; 
package Classlink; 
option java_package = "com.classlink.websocket.api.cw.domain.param.proto"; 
option java_outer_classname = "CWExamNoteExamActiveReqProto"; 

message CWExamNoteExamActiveReq{
  string DataTableType = 1;
  int32 QuizSetIdx = 2;
}