syntax = "proto3"; 
package Classlink; 
option java_package = "com.classlink.websocket.api.cw.domain.param.proto"; 
option java_outer_classname = "CWExamQuizListReqProto"; 

message CWExamQuizListReq{

}
