syntax = "proto3"; 
package Classlink; 
option java_package = "com.classlink.websocket.api.cw.domain.param.proto"; 
option java_outer_classname = "CWInfoBasicInfoReqProto"; 

message CWInfoBasicInfoReq{

int32 LecBidx = 1;

}