syntax = "proto3"; 
package Classlink; 
option java_package = "com.classlink.websocket.api.cw.domain.param.proto"; 
option java_outer_classname = "CWMessengerChatUserInfoReqProto"; 

message CWMessengerChatUserInfoReq{
int32 MemIdx = 1;
string IdentityType = 2;
}