syntax = "proto3"; 
package Classlink;  
option java_package = "com.classlink.websocket.api.cw.domain.dto.proto"; 
option java_outer_classname = "CWMessengerChatUserInfoResProto"; 

message CWMessengerChatUserInfoRes{
string MemName = 1;
string MemNickName = 2;
string MemImgUrl = 3;
}