syntax = "proto3"; 
package Classlink;  
option java_package = "com.classlink.websocket.api.cw.domain.dto.proto"; 
option java_outer_classname = "QuizAnswerDoneResProto"; 

message QuizAnswerDoneRes{

}