syntax = "proto3";
package Classlink;
option java_package = "com.classlink.websocket.api.lobby.home.domain.param.proto";
option java_outer_classname = "LobbyHomeEnrollmentRequestReplyReqProto";

message LobbyHomeEnrollmentRequestReplyReq {
  string InsCode = 1;
  string MemId = 2;
}